Model pipeline created

--- a/research/04_model_evaluation_with_mlflow.ipynb
+++ b/research/04_model_evaluation_with_mlflow.ipynb
@@ -2,40 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'d:\\\\Git\\\\DeepLearning_Classification\\\\research'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "%pwd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "os.chdir(\"../\")"
    ]
   },
   {
@@ -46,7 +17,7 @@
     {
      "data": {
       "text/plain": [
-       "'d:\\\\Git\\\\DeepLearning_Classification'"
+       "'d:\\\\Git\\\\DeepLearning_Classification\\\\research'"
       ]
      },
      "execution_count": 3,
@@ -56,6 +27,225 @@
    ],
    "source": [
     "%pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.chdir(\"../\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'d:\\\\Git\\\\DeepLearning_Classification'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import mlflow\n",
+    "\n",
+    "os.environ['MLFLOW_TRACKING_URI'] = 'https://dagshub.com/delphineasir/DeepLearning_Classification.mlflow'\n",
+    "os.environ['MLFLOW_TRACKING_USERNAME'] = 'DelphineAsir'\n",
+    "os.environ['MLFLOW_TRACKING_PASSWORD'] = 'githubgit1'\n",
+    "\n",
+    "mlflow.set_tracking_uri(os.environ['MLFLOW_TRACKING_URI'])\n",
+    "\n",
+    "# Your MLflow operations\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#set MLFLOW_TRACKING_USERNAME=delphineasir \n",
+    "#dagshub.init(repo_owner='delphineasir', repo_name='DeepLearning_Classification', mlflow=True)      "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MLFLOW_TRACKING_URI: https://dagshub.com/delphineasir/DeepLearning_Classification.mlflow\n",
+      "MLFLOW_TRACKING_USERNAME: delphineasir\n",
+      "MLFLOW_TRACKING_PASSWORD: 0938189d1de0c26eb099f30629a5bf4fa422e6c1\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "\n",
+    "print(\"MLFLOW_TRACKING_URI:\", os.environ.get('MLFLOW_TRACKING_URI'))\n",
+    "print(\"MLFLOW_TRACKING_USERNAME:\", os.environ.get('MLFLOW_TRACKING_USERNAME'))\n",
+    "print(\"MLFLOW_TRACKING_PASSWORD:\", os.environ.get('MLFLOW_TRACKING_PASSWORD'))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MLFLOW_TRACKING_URI: https://dagshub.com/delphineasir/DeepLearning_Classification.mlflow\n",
+      "MLFLOW_TRACKING_USERNAME: delphineasir\n",
+      "MLFLOW_TRACKING_PASSWORD: 0938189d1de0c26eb099f30629a5bf4fa422e6c1\n",
+      "Response Status Code: 404\n",
+      "Response Content: \n"
+     ]
+    },
+    {
+     "ename": "Exception",
+     "evalue": "Failed to connect to MLflow server",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mException\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 30\u001b[0m\n\u001b[0;32m     28\u001b[0m \u001b[38;5;66;03m# Check if the server responded with an error\u001b[39;00m\n\u001b[0;32m     29\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m response\u001b[38;5;241m.\u001b[39mstatus_code \u001b[38;5;241m!=\u001b[39m \u001b[38;5;241m200\u001b[39m:\n\u001b[1;32m---> 30\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFailed to connect to MLflow server\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     32\u001b[0m \u001b[38;5;66;03m# Set the tracking URI\u001b[39;00m\n\u001b[0;32m     33\u001b[0m mlflow\u001b[38;5;241m.\u001b[39mset_tracking_uri(os\u001b[38;5;241m.\u001b[39menviron[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mMLFLOW_TRACKING_URI\u001b[39m\u001b[38;5;124m'\u001b[39m])\n",
+      "\u001b[1;31mException\u001b[0m: Failed to connect to MLflow server"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import tensorflow as tf\n",
+    "import mlflow\n",
+    "import mlflow.keras\n",
+    "import requests\n",
+    "from requests.auth import HTTPBasicAuth\n",
+    "\n",
+    "# Set the environment variables\n",
+    "os.environ['MLFLOW_TRACKING_URI'] = 'https://dagshub.com/delphineasir/DeepLearning_Classification.mlflow'\n",
+    "os.environ['MLFLOW_TRACKING_USERNAME'] = 'delphineasir'\n",
+    "os.environ['MLFLOW_TRACKING_PASSWORD'] = '0938189d1de0c26eb099f30629a5bf4fa422e6c1'\n",
+    "\n",
+    "# Print environment variables for debugging\n",
+    "print(\"MLFLOW_TRACKING_URI:\", os.environ.get('MLFLOW_TRACKING_URI'))\n",
+    "print(\"MLFLOW_TRACKING_USERNAME:\", os.environ.get('MLFLOW_TRACKING_USERNAME'))\n",
+    "print(\"MLFLOW_TRACKING_PASSWORD:\", os.environ.get('MLFLOW_TRACKING_PASSWORD'))\n",
+    "\n",
+    "# Verify the connection to the MLflow server\n",
+    "tracking_uri = os.environ.get('MLFLOW_TRACKING_URI')\n",
+    "username = os.environ.get('MLFLOW_TRACKING_USERNAME')\n",
+    "password = os.environ.get('MLFLOW_TRACKING_PASSWORD')\n",
+    "\n",
+    "response = requests.get(f\"{tracking_uri}/#/\", auth=HTTPBasicAuth(username, password))\n",
+    "\n",
+    "print(\"Response Status Code:\", response.status_code)\n",
+    "print(\"Response Content:\", response.text)\n",
+    "\n",
+    "# Check if the server responded with an error\n",
+    "if response.status_code != 200:\n",
+    "    raise Exception(\"Failed to connect to MLflow server\")\n",
+    "\n",
+    "# Set the tracking URI\n",
+    "mlflow.set_tracking_uri(os.environ['MLFLOW_TRACKING_URI'])\n",
+    "\n",
+    "# Ensure the experiment name is valid\n",
+    "#mlflow.set_experiment(\"Your Experiment Name1\")  # Replace with your experiment name\n",
+    "\n",
+    "# Example of logging a Keras model\n",
+    "with mlflow.start_run():\n",
+    "    try:\n",
+    "        # Your code to train the model\n",
+    "        # model = ...\n",
+    "\n",
+    "        # Verify the log_model parameters\n",
+    "        print(\"Logging model...\")\n",
+    "        #mlflow.keras.log_model(model, \"model\")\n",
+    "    finally:\n",
+    "        mlflow.end_run()\n",
+    "# Clear the TensorFlow session to free up memory\n",
+    "\n",
+    "tf.keras.backend.clear_session()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Logging model...\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'model' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 10\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m mlflow\u001b[38;5;241m.\u001b[39mstart_run():\n\u001b[0;32m      5\u001b[0m     \u001b[38;5;66;03m# Your model training code here\u001b[39;00m\n\u001b[0;32m      6\u001b[0m     \u001b[38;5;66;03m# model = ...\u001b[39;00m\n\u001b[0;32m      7\u001b[0m \n\u001b[0;32m      8\u001b[0m     \u001b[38;5;66;03m# Verify the log_model parameters\u001b[39;00m\n\u001b[0;32m      9\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mLogging model...\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m---> 10\u001b[0m     mlflow\u001b[38;5;241m.\u001b[39mkeras\u001b[38;5;241m.\u001b[39mlog_model(\u001b[43mmodel\u001b[49m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmodel\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'model' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "import mlflow\n",
+    "import mlflow.keras\n",
+    "\n",
+    "with mlflow.start_run():\n",
+    "    # Your model training code here\n",
+    "    # model = ...\n",
+    "\n",
+    "    # Verify the log_model parameters\n",
+    "    print(\"Logging model...\")\n",
+    "    mlflow.keras.log_model(model, \"model\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current MLflow tracking URI: https://dagshub.com/delphineasir/DeepLearning_Classification.mlflow\n"
+     ]
+    }
+   ],
+   "source": [
+    "import mlflow\n",
+    "\n",
+    "current_tracking_uri = mlflow.get_tracking_uri()\n",
+    "print(f\"Current MLflow tracking URI: {current_tracking_uri}\")\n"
    ]
   },
   {
