--- a/research/04_model_evaluation_with_mlflow.ipynb
+++ b/research/04_model_evaluation_with_mlflow.ipynb
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -121,19 +121,9 @@
       "MLFLOW_TRACKING_URI: https://dagshub.com/delphineasir/DeepLearning_Classification.mlflow\n",
       "MLFLOW_TRACKING_USERNAME: delphineasir\n",
       "MLFLOW_TRACKING_PASSWORD: 0938189d1de0c26eb099f30629a5bf4fa422e6c1\n",
-      "Response Status Code: 404\n",
-      "Response Content: \n"
-     ]
-    },
-    {
-     "ename": "Exception",
-     "evalue": "Failed to connect to MLflow server",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mException\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[2], line 30\u001b[0m\n\u001b[0;32m     28\u001b[0m \u001b[38;5;66;03m# Check if the server responded with an error\u001b[39;00m\n\u001b[0;32m     29\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m response\u001b[38;5;241m.\u001b[39mstatus_code \u001b[38;5;241m!=\u001b[39m \u001b[38;5;241m200\u001b[39m:\n\u001b[1;32m---> 30\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFailed to connect to MLflow server\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     32\u001b[0m \u001b[38;5;66;03m# Set the tracking URI\u001b[39;00m\n\u001b[0;32m     33\u001b[0m mlflow\u001b[38;5;241m.\u001b[39mset_tracking_uri(os\u001b[38;5;241m.\u001b[39menviron[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mMLFLOW_TRACKING_URI\u001b[39m\u001b[38;5;124m'\u001b[39m])\n",
-      "\u001b[1;31mException\u001b[0m: Failed to connect to MLflow server"
+      "Response Status Code: 200\n",
+      "Response Content: <!doctype html><html lang=\"en\"><head><meta charset=\"utf-8\"/><meta name=\"viewport\" content=\"width=device-width,initial-scale=1,shrink-to-fit=no\"/><link rel=\"shortcut icon\" href=\"./static-files/favicon.ico\"/><meta name=\"theme-color\" content=\"#000000\"/><link rel=\"manifest\" href=\"./static-files/manifest.json\"/><title>MLflow</title><script defer=\"defer\" src=\"static-files/static/js/main.869400b7.js\"></script><link href=\"static-files/static/css/main.a8b090b0.css\" rel=\"stylesheet\"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id=\"root\"></div><div id=\"modal\"></div></body></html>\n",
+      "Logging model...\n"
      ]
     }
    ],
